# training_bmkg

./: README.md
RH_Calculator/: pyproject.toml  setup.cfg  setup.py
RH_Calculator/src/RH_calculator.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
RH_Calculator/src/rh_calculator/: esat.py
RH_Calculator/src/rh_calculator.egg-info/: PKG-INFO  SOURCES.txt
RH_Calculator/tests/: test_humid.py
humidity/: main.py
