[tool.poetry]
name = "rh-calculator"
version = "0.1.0"
description = ""
authors = ["ratnasatya <ratnasat@gmail.com>"]
readme = "README.md"
packages = [{include = "rh_calculator", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
